# bencode.cy

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml  readme.md  run_profile.py  setup.py
.github/workflows/: publish-to-pypi-uv.yml
bencode/: __init__.py  _bencode.pxd  _bencode.py  _fake_cython.py  utils.py
tests/: debian-mac-13.1.0-amd64-netinst.iso.torrent  test_bencode.py
